# ToolKit

./: .editorconfig  .gitignore  AGENTS.md  BUILD.md  BUILD_VS2022_ClangCL.md  BUILD_linux.md  CMakeLists.txt  CMakePresets.json  ToolKit.pc.in  readme.md  readme.txt  测试文档指导说明.md
.claude/: settings.local.json
.cursor/skills/git-commit-push/: SKILL.md
.cursor/skills/git-commit-push/scripts/: commit-compat.sh
beak/-----/Json_helper-阿瓦已公司/: JsonHelper.cpp  Json_helper-阿瓦已公司.h
beak/-----/asyncallevent/: asyncallevent.h  uvasyncallevent.cpp  uvasyncallevent.h
beak/-----/communication/: communication_factory.cpp  tcpclient_impl.cpp  tcpclient_impl.h  tcpserver_impl.cpp  tcpserver_impl.h
beak/-----/http/: Http.cpp  Http.h  root_certificates.hpp
beak/-----/log-阿瓦已公司/: Log.cpp  Log.h
beak/-----/pooling/objectPool/: object_pool.cpp  object_pool.h
beak/-----/private/: function_view.h
beak/-----/socket/: socketconnection.cpp  socketconnection.h  socketconnectionimpl.cpp  socketconnectionimpl.h
beak/-----/socket/client/: connection_metadata.cpp  connection_metadata.h  socket_client.h
beak/-----/socket/client/boost_impl/: WebSocketHelper.cpp  WebSocketHelper.h  boost_socket.cpp  boost_socket.h
beak/-----/socket/client/websocketpp_impl/: client_no_tls.cpp  client_no_tls.h
beak/-----/variant/: variant.cpp  variant.h
beak/api-b/: utils.h
beak/api-b/cache_queue/: cache_queue.h  readme.txt  spsc_queue.h  sync_queue_template.h
beak/api-b/communication/: communication.h
beak/api-b/config/: configINI.h
beak/api-b/custom_thread/: threadpool_invoke_interface copy.h
beak/api-b/json/: json_helper.h
beak/api-b/time/: timer.h  timing.hpp
beak/api-b/websocket/: socketconnection.h
cmake/: ToolKitCompileCommands.cmake  ToolKitLibrary.cmake  ToolKitOptions.cmake  ToolKitTarget.cmake
cmake/toolchains/: clangcl-db.cmake  llvm-macos.cmake
docs/: BUILD.md  BUILD_VS2022_ClangCL.md  BUILD_macos.md  测试文档指导说明.md
example/: CMakeLists.txt
example/base_test/eventloop_test/: CMakeLists.txt  eventloop_simple_test.cpp  eventloop_test.cpp  eventloop测试.md  send_ctrl_c_check_exitcode.py
example/jsontest/: CMakeLists.txt  jsontest.hpp  main.cpp
example/network_test/: CMakeLists.txt  tcp_network_test.cpp  tcp_network_test.md  udp_network_test.cpp
example/network_test/tcp_test/: tcp_client_test.cpp  tcp_server_test.cpp
example/qttest/: Widget.cpp  Widget.h  Widget.ui  qttest.rc  qttest.vcxproj  qttest.vcxproj.filters
example/test/: CMakeLists.txt  boostlog.hpp  cache_queue_test.hpp  configini_test.hpp  jsontest.hpp  loghelpertest.hpp  main.cpp  queuetest.hpp  sync_queue_sync_test.cpp  test.vcxproj  test.vcxproj.filters  thread_invoke_test.hpp  threadpool_invoke_test.hpp  time_test.hpp
example/thread_test/: CMakeLists.txt  README_threadpool_invoke_test.md  threadpool_invoke_full_test.cpp
example/timer/: CMakeLists.txt  event_loop_timer_example.cpp
example/websocket_test/: CMakeLists.txt  main.cpp  server.py
include/: define.h
include/base/: utils.h
include/base/eventloop/: event.h  event_loop_interface.h  event_loop_thread.h
include/base/json/: json_helper.h
include/base/log/: log_helper.h
include/base/queue/: cache_queue.h  spsc_queue_2.h  sync_queue_template.h
include/network/tcp/: tcp_callback.h  tcp_client_interface.h  tcp_connection.h  tcp_server_interface.h
include/network/udp/: udp_callback.h  udp_client_interface.h  udp_server_interface.h
include/threadpool/: thread_invoke_interface.h  threadpool_invoke_interface.h
include/time/: event_loop_timer.h  time_helper.h
src/: define.h
src/base/: utils.cpp
src/base/eventloop/: event_loop_boost.cpp  event_loop_boost.h  event_loop_thread.cpp  status.h
src/base/json/: json_helper.cpp
src/base/log/: log_helper.cpp  log_impl.cpp  log_impl.h
src/config/: Config.ini  configINIImpl.cpp  configINIImpl.h
src/network/tcp/: tcp_client.cpp  tcp_connection.cpp  tcp_connection_impl.h  tcp_server.cpp
src/network/udp/: udp_client.cpp  udp_server.cpp
src/network/websocket/: socketconnection.cpp  socketconnectionimpl.cpp  socketconnectionimpl.h
src/network/websocket/client/: socket_client.cpp  socket_client.h
src/network/websocket/client/boost_impl/: boost_socket.cpp  boost_socket.h
src/threadpool/: thread_invoke_impl.cpp  thread_invoke_impl.h  threadpool_invoke_impl.cpp  threadpool_invoke_impl.h
src/time/: time_helper.cpp  timer.cpp
src/time/eventloop_timer/: event_loop_timer.cpp  event_loop_timer_asio.cpp  event_loop_timer_asio.h
src/time/standardtimer/: standardtimer.cpp  standardtimer.h
src/time/uvtimer/: uv_timer.cpp  uv_timer.h
third_party_call/: CMakeLists.txt  readme.txt
third_party_call/libhv/example/: CMakeLists.txt  queue_threadpool_example.cpp  tcp_client_test.cpp  tcp_server_test.cpp  timer_example.cpp
third_party_call/thread-pool-master/: BS_thread_pool_custom_test.cpp  BS_thread_pool_test.cpp  CMakeLists.txt
